# inertia

./: .dockerignore  .eslintignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
create-board-db/: Cargo.toml
create-board-db/db/: boards.db-shm
create-board-db/migrations/: 20231106232842_create-db.sql
create-board-db/script/: refresh-db.sh
create-board-db/src/: main.rs
fdg-test/: Cargo.toml
fdg-test/src/: main.rs
inertia-async-server/: Cargo.toml  dockerfile
inertia-async-server/db/: boards.db  boards.db-shm  boards.db-wal  positions.db
inertia-async-server/src/: db_utils.rs  difficulty_board_generator.rs  join.rs  main.rs  state.rs  ws_receiver.rs
inertia-core/: Cargo.toml
inertia-core/script/: bench.sh  build-types.sh  build-web-types.sh
inertia-core/src/: lib.rs
inertia-core/src/board_generators/: classic.rs  empty_middle_goal.rs  mod.rs  one_move_solution.rs
inertia-core/src/events/: disconnect_event.rs  join_event.rs  mod.rs  rename_event.rs  round_timeline_event.rs
inertia-core/src/exploration/: mod.rs
inertia-core/src/mechanics/: actor_squares.rs  bitboard.rs  block_board.rs  board.rs  direction.rs  mod.rs  move_board.rs  movement.rs  position.rs  square.rs  walled_board.rs  walled_board_position.rs
inertia-core/src/message/: from_client.rs  mod.rs  to_client.rs
inertia-core/src/requests/: heartbeat_request.rs  mod.rs
inertia-core/src/solvers/: astar.rs  combined_heuristic.rs  crawl_aware_heuristic_board.rs  difficulty.rs  expensive_crawls_board.rs  fixtures.rs  group_min_moves_board.rs  group_min_moves_expensive_crawls_board.rs  heuristic.rs  heuristic_board.rs  heuristic_board_format.rs  idas.rs  idas_nonrecursive.rs  improved_heuristic_board.rs  min_assists_board.rs  min_crawls_board.rs  min_moves_board.rs  mod.rs  noop_hasher.rs  queue.rs  search_idas_indexing.rs  search_idas_indexing_moveboard.rs  solution.rs  solution_step.rs  zobrist.rs
inertia-core/src/solvers/snapshots/: inertia_core__solvers__group_min_moves_board__test__empty.snap  inertia_core__solvers__group_min_moves_board__test__fortress.snap  inertia_core__solvers__group_min_moves_board__test__gauntlet_close.snap  inertia_core__solvers__group_min_moves_board__test__gauntlet_close_guardrail.snap  inertia_core__solvers__group_min_moves_board__test__one-move.snap  inertia_core__solvers__group_min_moves_board__test__random_classic_gen_15.snap  inertia_core__solvers__group_min_moves_board__test__random_classic_gen_21.snap  inertia_core__solvers__group_min_moves_board__test__random_classic_gen_22.snap  inertia_core__solvers__group_min_moves_board__test__shuffle.snap  inertia_core__solvers__group_min_moves_board__test__shuffle_x.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__empty.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__empty.snap.new  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__fortress.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__gauntlet_close.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__gauntlet_guardrail.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__one-move.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__random_classic_gen_15.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__random_classic_gen_21.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__random_classic_gen_22.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__shuffle.snap  inertia_core__solvers__group_min_moves_expensive_crawls_board__test__shuffle_x.snap  inertia_core__solvers__min_assists_board__test__empty.snap  inertia_core__solvers__min_assists_board__test__fortress.snap  inertia_core__solvers__min_assists_board__test__gauntlet.snap  inertia_core__solvers__min_assists_board__test__gauntlet_guardrail.snap  inertia_core__solvers__min_assists_board__test__one-move.snap  inertia_core__solvers__min_assists_board__test__random_classic_gen_15.snap  inertia_core__solvers__min_assists_board__test__random_classic_gen_21.snap  inertia_core__solvers__min_assists_board__test__random_classic_gen_22.snap  inertia_core__solvers__min_assists_board__test__shuffle.snap  inertia_core__solvers__min_assists_board__test__shuffle_x.snap  inertia_core__solvers__min_crawls_board__test__empty.snap  inertia_core__solvers__min_crawls_board__test__fortress.snap  inertia_core__solvers__min_crawls_board__test__gauntlet.snap  inertia_core__solvers__min_crawls_board__test__gauntlet_guardrail.snap  inertia_core__solvers__min_crawls_board__test__one-move.snap  inertia_core__solvers__min_crawls_board__test__random_classic_gen_15.snap  inertia_core__solvers__min_crawls_board__test__random_classic_gen_21.snap  inertia_core__solvers__min_crawls_board__test__random_classic_gen_22.snap  inertia_core__solvers__min_crawls_board__test__shuffle.snap  (+11 more)
inertia-core/src/state/: data.rs  mod.rs  room_data.rs  room_state.rs
inertia-core/src/state/event/: apply_event.rs  connect.rs  disconnect.rs  finalize_bids.rs  lock_in_bid.rs  make_bid.rs  mod.rs  ready_bid.rs  result.rs  start_round.rs  update_solution.rs  yield_solve.rs
inertia-core/src/wasm/: js_ffi.rs  log.rs  mod.rs
inertia-fixtures/: Cargo.toml
inertia-fixtures/src/: lib.rs
inertia-server/: Cargo.toml
inertia-server/src/: main.rs
inertia-wasm/: Cargo.toml
inertia-wasm/src/: js_ffi.rs  lib.rs  log.rs
inertia-web/: .eslintrc.js  dockerfile  nginx.prod.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
inertia-web/public/: fonts.css  index.html  reset.css
inertia-web/src/: app.tsx  bootstrap.ts  index.tsx
inertia-web/src/styles/: common.scss  (+1 more)
script/: deploy.sh  publish-prod-images.sh  pull-prod-images.sh
solver-profile/: Cargo.toml
solver-profile/script/: benchmark_branches.sh  flamegraph.sh  perf.sh  profile.sh
solver-profile/src/: main.rs
verify-zobrist-constants/: Cargo.toml
verify-zobrist-constants/src/: main.rs
(+119 files in other folders)
