[package]
name = "create-board-db"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
inertia-core = { path = "../inertia-core/" }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "migrate"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
