[package]
name = "inertia-async-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
inertia-core = { path = "../inertia-core/" }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "migrate"] }
rand = "0.8.5"
