[package]
name = "inertia-async-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["ws"] }
futures = "0.3.30"
inertia-core = { path = "../inertia-core/" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "migrate"] }
rand = "0.8.5"
tower-http = { version = "0.5.0", features = ["cors"] }

[dev-dependencies]
axum = { version = "0.7.3", features = ["ws", "macros"] }
