[package]
name = "inertia-async-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
inertia-core = { path = "../inertia-core/" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
rand = "0.8.5"
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = { version = "0.4.41", features = ["now"], default-features = false }
chrono-tz = "0.10.4"

[dev-dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
