[package]
name = "inertia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", optional = true }
itertools = "0.12.0"
num_enum = "0.7.3"
primitive-types = "0.12.2"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = { version = "3.4.0", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
tsify = { version = "0.4.5", optional = true }
wasm-bindgen  = { version = "0.2.89", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = []
web = [
  "console_error_panic_hook",
  "dep:tsify",
  "dep:wasm-bindgen",
  "dep:getrandom",
  "dep:serde_with",
  "getrandom/js"
]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
