[package]
name = "inertia-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
itertools = "0.14.0"
num_enum = "0.7.4"
rand = "0.8.5"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.14.0", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tsify = { version = "0.5.5", optional = true }
wasm-bindgen  = { version = "0.2.100", optional = true }

[dev-dependencies]
insta = "1.43.1"
pretty_assertions = "1.4.1"
inertia-fixtures = { path = "../inertia-fixtures/" }

[profile.dev.package]
insta.opt-level = 3

[features]
default = []
web = [
  "console_error_panic_hook",
  "dep:tsify",
  "dep:wasm-bindgen",
  "dep:serde_with",
  "dep:getrandom",
]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
