[package]
name = "inertia-wasm"
version = "0.1.0"
authors = ["tomjw64 <tom.jw64@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
inertia-core = { path = "../inertia-core/" }
serde = { version = "1.0.178", features = ["derive"] }
tsify = "0.4.5"

getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
serde_with = "3.2.0"
base64 = "0.21.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
